--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,10 +2,11 @@
   "name": "march-organizer-server",
   "version": "1.0.0",
   "description": "Backend server for March Organizer app",
-  "main": "server.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "tsc",
+    "start": "node dist/server.ts",
+    "dev": "ts-node-dev --respawn src/server.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -13,7 +14,8 @@
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "@march-organizer/shared": "1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
