--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -8,7 +8,7 @@
     "dev": "../../node_modules/.bin/vite",
     "build": "../../node_modules/.bin/tsc && vite build",
     "preview": "../../node_modules/.bin/vite preview",
-    "lint": "../../node_modules/.bin/eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext .ts,.tsx --cache",
     "setup": "node ../../setup-env.js"
   },
   "dependencies": {
