--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,49 +1,41 @@
 {
-  "name": "march-organizer",
-  "version": "1.0.0",
-  "description": "Web app for organizing a long distance march",
+  "name": "@march-organizer/client",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "dev": "../../node_modules/.bin/vite",
-    "build": "../../node_modules/.bin/tsc && vite build",
-    "preview": "../../node_modules/.bin/vite preview",
-    "lint": "eslint src --ext .ts,.tsx --cache",
-    "setup": "node ../../setup-env.js"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@googlemaps/js-api-loader": "^1.16.8",
-    "@types/google.maps": "^3.58.1",
+    "@googlemaps/js-api-loader": "^1.16.10",
+    "@march-organizer/shared": "1.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
     "lucide-react": "^0.263.1",
-    "ms": "^2.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
-    "@march-organizer/shared": "1.0.0"
+    "superjson": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
-    "@types/helmet": "^0.0.48",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
-    "@types/ms": "^2.1.0",
-    "@types/node": "^24.0.10",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react": "^4.5.2",
+    "@types/google.maps": "^3.58.1",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^6.3.5",
-    "vite-plugin-gh-pages": "^1.0.1"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.0.2",
+    "vite": "^7.0.3"
   }
 }
