--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "march-organizer-server",
+  "name": "@march-organizer/server",
   "version": "1.0.0",
-  "description": "Backend server for March Organizer app",
+  "description": "Backend server for March Planner app",
   "main": "src/server.ts",
+  "types": "src/index.ts",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.ts",
@@ -10,18 +11,39 @@
     "lint": "eslint src --ext .ts --cache"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "jsonwebtoken": "^9.0.2",
+    "@march-organizer/shared": "1.0.0",
+    "@trpc/server": "^11.0.0",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
-    "@march-organizer/shared": "1.0.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "superjson": "^2.2.1",
+    "uuid": "^11.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.0",
+    "@types/uuid": "^10.0.0",
+    "eslint": "^8.55.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.0"
   },
-  "keywords": ["march", "organizer", "api", "authentication"],
+  "keywords": [
+    "march",
+    "planner",
+    "api",
+    "trpc",
+    "authentication"
+  ],
   "author": "Your Name",
   "license": "MIT"
-} 
+}
