moving things to the new trpc api and fixing bugs

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "eslint": "^9.30.1"
   },
   "lint-staged": {
     "packages/client/src/**/*.{ts,tsx}": [
@@ -36,4 +37,5 @@
       "eslint --fix"
     ]
   }
+
 }
