--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@march-organizer/shared": "1.0.0",
+    "@prisma/client": "^6.11.1",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@trpc/server": "^11.0.0",
     "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
@@ -35,6 +37,7 @@
     "@types/node": "^20.10.0",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.55.0",
+    "prisma": "^6.11.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.0"
   },
