--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@eslint/js": "^9.30.1",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
     "eslint-plugin-functional": "^9.0.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
-    "typescript": "^5.8.3",
-    "eslint": "^9.30.1"
+    "typescript": "^5.8.3"
   },
   "lint-staged": {
     "packages/client/src/**/*.{ts,tsx}": [
@@ -36,6 +36,12 @@
     "packages/shared/src/**/*.ts": [
       "eslint --fix"
     ]
+  },
+  "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
+    "@trpc/client": "^11.4.3",
+    "@trpc/server": "^11.4.3",
+    "@trpc/tanstack-react-query": "^11.4.3",
+    "update": "^0.7.4"
   }
-
 }
