--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
     "@march-organizer/shared": "1.0.0",
-    "@tanstack/react-query": "^5.0.0",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "lucide-react": "^0.263.1",
