--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/server.ts",
   "types": "src/index.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "prisma generate; tsc",
     "start": "node dist/server.ts",
     "debug": "ts-node-dev --inspect --respawn src/server.ts",
     "lint": "eslint  --no-ignore src/**/*.ts --cache",
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@march-organizer/shared": "1.0.0",
-    "@prisma/client": "^6.11.1",
+    "@prisma/client": "^6.12.0",
     "@prisma/extension-accelerate": "^2.0.2",
     "@trpc/server": "^11.0.0",
     "axios": "^1.10.0",
@@ -37,7 +37,7 @@
     "@types/node": "^20.10.0",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.55.0",
-    "prisma": "^6.11.1",
+    "prisma": "^6.12.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.0"
   },
