--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@trpc/client": "^11.4.3",
     "@trpc/server": "^11.4.3",
     "@trpc/tanstack-react-query": "^11.4.3",
+    "dotenv": "^17.2.0",
     "update": "^0.4.2"
   }
 
